Making sense with pom.xml